# auto-responses

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: app.yaml  searches.yaml
data/: state.json
scripts/: reset.sh
src/app/: __init__.py  cli.py  main.py
src/app/core/: config.py  keyword_filter.py  logging.py  models.py  state.py  workflow.py
src/app/llm/: base.py  cover_letter.py
src/app/sources/: __init__.py
src/app/sources/hh/: __init__.py  apply.py  models.py  parser.py  resume.py  scanner.py  selectors.py  session.py
